kubernetes/core/gitea/action-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "300"
  labels:
    app: act-runner
  name: act-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: act-runner
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: act-runner
    spec:
      restartPolicy: Always
      volumes:
        - name: runner-data
          persistentVolumeClaim:
            claimName: act-runner-vol
      securityContext:
        fsGroup: 1000
      containers:
        - name: runner
          image: gitea/act_runner:latest-dind-rootless
          imagePullPolicy: Always
          # command: ["sh", "-c", "while ! nc -z localhost 2376 </dev/null; do echo 'waiting for docker daemon...'; sleep 5; done; /sbin/tini -- /opt/act/run.sh"]
          securityContext:
            privileged: true
          volumeMounts:
            - name: runner-data
              mountPath: /data
